plugins {
    id 'application'
    id 'checkstyle'
}

group = 'sheppy'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    def javaFxVersion = '17.0.7'

    implementation "org.openjfx:javafx-base:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-base:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:win"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:mac"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:linux"

    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'sheppy.gui.Launcher'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

checkstyle {
    toolVersion = '11.0.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('jar') {
    manifest {
        attributes('Main-Class': application.mainClass.get())
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
